[project]
name = "api-gerenciamento-voluntarios"
version = "0.1.0"
description = "Desafio tecnico da FrontEnd Fusion para gerenciar o cadastro de voluntarios em uma organizacao"
authors = [
    {name = "Eugenio Lopes"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi (>=0.121.2,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic[email] (>=2.12.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)"
]
